tests/ui/nll/ty-outlives/ty-param-closure-outlives-from-return-type.stderr
note: external requirements
  --> $DIR/ty-param-closure-outlives-from-return-type.rs:26:23
   |
LL |     with_signature(x, |y| y)
   |                       ^^^
   |
   = note: defining type: no_region::<'_#1r, T>::{closure#0} with closure substs [
               Int(
                   I32,
               ),
               FnPtr(
                   Binder(
                       ([Tuple([Adt(std::boxed::Box, [Param(T/#1), Adt(std::alloc::Global, [])])])]; c_variadic: false)->Adt(std::boxed::Box, [Dynamic([Binder(Trait(std::fmt::Debug), [])], '_#2r, Dyn), Adt(std::alloc::Global, [])]),
                       [],
                   ),
               ),
               Tuple(
                   [],
               ),
           ]
   = note: number of external vids: 3
   = note: where Param(T/#1): '_#2r

note: no external requirements
  --> $DIR/ty-param-closure-outlives-from-return-type.rs:15:1
   |
LL | / fn no_region<'a, T>(x: Box<T>) -> Box<dyn Debug + 'a>
LL | | where
LL | |     T: Debug,
   | |_____________^
   |
   = note: defining type: no_region::<'_#1r, T>

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/ty-param-closure-outlives-from-return-type.rs:26:27
   |
LL |     with_signature(x, |y| y)
   |                           ^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL |     T: Debug + 'a,
   |              ++++

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/ty-param-closure-outlives-from-return-type.rs:41:5
   |
LL |     x
   |     ^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL |     T: 'b + Debug + 'a,
   |                   ++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0309`.
